[tool.poetry]
name = "event_presenter"
version = "0.1.0"
description = ""
authors = ["Henry Jobst <github@jobst-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.17"
alembic = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
